ghost/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ghost
  name: ghost
  labels:
    app: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - image: ghost:5.2.3
          name: ghost
          ports:
            - containerPort: 2368
              name: http
          volumeMounts:
            - name: ghost-data
              mountPath: /var/lib/ghost/content
      volumes:
        - name: ghost-data
          persistentVolumeClaim:
            claimName: ghost
