ghost/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: ghost
  labels:
    app: ghost
spec:
  selector:
    app: ghost
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
