ghost/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost
  namespace: ghost
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bashmyshell.com
        - www.bashmyshell.com
      secretName: bashmyshell-com-tls
  rules:
    - host: www.bashmyshell.com
      http:
        paths:
          - backend:
              service:
                name: ghost
                port:
                  name: http
            path: /
            pathType: Prefix
